FIX: Chart on page_job.html: responsive problem on small screens

--- a/css/main.scss
+++ b/css/main.scss
@@ -78,7 +78,10 @@ ul.dropdown-menu a:hover {
 }
 
 #conclusion {
-    padding-bottom: 15vh;
+    background-color: rgba(0,0,0,80%);
+    padding: 1em;
+    border-radius: 10px;
+    margin-bottom: 15vh;
 }
 
 .shake {
@@ -165,7 +168,7 @@ footer {
     border: thin solid white;
     margin: 25px auto;
     text-shadow: none;
-    min-width: 400px;
+    // min-width: 320px;
     margin-bottom: 10vh;
 }
 
@@ -177,7 +180,7 @@ footer {
 
 .styled-table th,
 .styled-table td {
-    padding: 12px 15px;
+    padding: .5rem;
 }
 
 .styled-table tbody tr {
@@ -210,11 +213,6 @@ footer {
         text-shadow: 3px 3px 0px black;
     }
 
-    #canvas-wrapper {
-        margin: auto;
-        width: 80vw;
-        height: 50vh;
-    }
 
 }
 
